fix with fit-content on firefox

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -3,3 +3,8 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.width-fit-content{
+  max-width: fit-content;
+  width: -moz-max-content;
+}
